--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>So-Cal Game Stores – Demo</title>
+  <title>So-Cal Game Stores – Demo (Platform Groups)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
@@ -197,6 +197,12 @@
       color: #9ca3af;
     }
 
+    .store-address {
+      font-size: 0.72rem;
+      color: #6b7280;
+      margin-top: 2px;
+    }
+
     .store-tags {
       margin-top: 4px;
       display: flex;
@@ -212,6 +218,28 @@
       border: 1px solid rgba(75,85,99,0.7);
       text-transform: uppercase;
       letter-spacing: 0.08em;
+    }
+
+    /* ============= STORE CONTACT ============= */
+    .store-contact {
+      margin-top: 6px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      font-size: 0.75rem;
+      color: #9ca3af;
+      align-items: center;
+    }
+
+    .store-contact a {
+      color: #e5e7eb;
+      text-decoration: none;
+      border-bottom: 1px dotted rgba(148,163,184,0.7);
+      padding-bottom: 1px;
+    }
+
+    .store-contact a:hover {
+      border-bottom-style: solid;
     }
 
     /* ============= GAME LIST ============= */
@@ -305,6 +333,7 @@
       .search-row {
         flex-direction: row;
         align-items: center;
+        flex-wrap: wrap;
       }
       .filter-chips {
         margin-top: 0;
@@ -353,22 +382,85 @@
             <div class="input-wrapper">
               <select id="platformSelect">
                 <option value="">All platforms</option>
-                <option value="NES">NES</option>
-                <option value="SNES">SNES</option>
-                <option value="N64">Nintendo 64</option>
-                <option value="GameCube">GameCube</option>
-                <option value="Wii">Wii</option>
-                <option value="GBA">Game Boy Advance</option>
-                <option value="DS">Nintendo DS</option>
-                <option value="3DS">Nintendo 3DS</option>
-                <option value="PS1">PlayStation</option>
-                <option value="PS2">PlayStation 2</option>
-                <option value="PS3">PlayStation 3</option>
-                <option value="PS4">PlayStation 4</option>
-                <option value="Switch">Nintendo Switch</option>
-                <option value="PSP">PSP</option>
-                <option value="Xbox">Xbox</option>
-                <option value="Xbox 360">Xbox 360</option>
+
+                <optgroup label="Atari">
+                  <option value="Atari 2600">Atari 2600</option>
+                  <option value="Atari 5200">Atari 5200</option>
+                  <option value="Atari 7800">Atari 7800</option>
+                  <option value="Atari Jaguar">Atari Jaguar</option>
+                  <option value="Atari Lynx">Atari Lynx</option>
+                </optgroup>
+
+                <optgroup label="Nintendo">
+                  <option value="3DS">Nintendo 3DS</option>
+                  <option value="DS">Nintendo DS</option>
+                  <option value="Game Boy">Game Boy</option>
+                  <option value="Game Boy Advance">Game Boy Advance</option>
+                  <option value="Game Boy Color">Game Boy Color</option>
+                  <option value="GameCube">GameCube</option>
+                  <option value="N64">Nintendo 64</option>
+                  <option value="NES">NES</option>
+                  <option value="SNES">SNES</option>
+                  <option value="Switch">Nintendo Switch</option>
+                  <option value="Virtual Boy">Virtual Boy</option>
+                  <option value="Wii">Wii</option>
+                  <option value="Wii U">Wii U</option>
+                </optgroup>
+
+                <optgroup label="PlayStation">
+                  <option value="PS1">PlayStation</option>
+                  <option value="PS2">PlayStation 2</option>
+                  <option value="PS3">PlayStation 3</option>
+                  <option value="PS4">PlayStation 4</option>
+                  <option value="PS5">PlayStation 5</option>
+                  <option value="PSP">PSP</option>
+                  <option value="PS Vita">PS Vita</option>
+                </optgroup>
+
+                <optgroup label="Xbox">
+                  <option value="Xbox">Xbox</option>
+                  <option value="Xbox 360">Xbox 360</option>
+                  <option value="Xbox One">Xbox One</option>
+                  <option value="Xbox Series X/S">Xbox Series X/S</option>
+                </optgroup>
+
+                <optgroup label="Sega">
+                  <option value="Game Gear">Game Gear</option>
+                  <option value="Genesis">Genesis</option>
+                  <option value="Master System">Master System</option>
+                  <option value="Saturn">Sega Saturn</option>
+                  <option value="Dreamcast">Dreamcast</option>
+                </optgroup>
+
+                <optgroup label="NEC / PC Engine">
+                  <option value="PC Engine">PC Engine</option>
+                  <option value="TurboGrafx-16">TurboGrafx-16</option>
+                  <option value="Turbo Duo">Turbo Duo</option>
+                </optgroup>
+
+                <optgroup label="SNK / Neo Geo">
+                  <option value="Neo Geo AES">Neo Geo AES</option>
+                  <option value="Neo Geo CD">Neo Geo CD</option>
+                  <option value="Neo Geo Pocket">Neo Geo Pocket</option>
+                  <option value="Neo Geo Pocket Color">Neo Geo Pocket Color</option>
+                </optgroup>
+
+                <optgroup label="Other / Classic">
+                  <option value="3DO">3DO</option>
+                  <option value="ColecoVision">ColecoVision</option>
+                  <option value="Intellivision">Intellivision</option>
+                </optgroup>
+              </select>
+            </div>
+          </div>
+
+          <div class="field-group">
+            <div class="input-wrapper">
+              <select id="locationSelect">
+                <option value="">Any location (So-Cal)</option>
+                <option value="la-koreatown">Near me: LA – Koreatown</option>
+                <option value="riverside-dt">Near me: Riverside – Downtown</option>
+                <option value="oc-santa-ana">Near me: OC – Santa Ana</option>
               </select>
             </div>
           </div>
@@ -377,7 +469,7 @@
         <div class="filter-chips">
           <span class="chip">Region: So-Cal</span>
           <span class="chip">Physical copies only</span>
-          <span class="chip">Local store demo data</span>
+          <span class="chip">Prototype: area filter, not GPS</span>
         </div>
       </section>
 
@@ -394,12 +486,12 @@
 
       <div class="empty-state" id="emptyState" style="display:none;">
         No matches found for your search.<br />
-        Try a different title or clear the platform filter.
+        Try a different title or clear the filters.
       </div>
     </main>
 
     <footer>
-      This is a front-end demo. Real inventory &amp; live prices would come from store integrations.
+      This is a front-end demo. Real inventory, live prices &amp; distance would come from store integrations + maps API.
     </footer>
   </div>
 
@@ -412,21 +504,33 @@
         name: "Retro Vault LA",
         city: "Los Angeles",
         area: "Koreatown",
+        address: "3282 Wilshire Blvd, Los Angeles, CA 90010",
+        locationKey: "la-koreatown",
         tags: ["Retro", "Imports", "PS2", "GameCube", "Nintendo"],
+        phone: "(213) 555-0199",
+        instagram: "retrovaultla"
       },
       {
         id: "inland-games-riv",
         name: "Inland Games",
         city: "Riverside",
         area: "Downtown Riverside",
+        address: "4215 Main St, Riverside, CA 92501",
+        locationKey: "riverside-dt",
         tags: ["Modern", "Retro", "Trading"],
+        phone: "(951) 555-0142",
+        instagram: "inlandgames"
       },
       {
         id: "oc-byte-exch",
         name: "OC Byte Exchange",
         city: "Orange County",
         area: "Santa Ana",
+        address: "117 W 4th St, Santa Ana, CA 92701",
+        locationKey: "oc-santa-ana",
         tags: ["Switch", "PS4", "Collectibles"],
+        phone: "(714) 555-0177",
+        instagram: "ocbyteexchange"
       }
     ];
 
@@ -452,8 +556,8 @@
       { title: "The Legend of Zelda: Twilight Princess", platform: "Wii", condition: "CIB",  price: 49.99,  storeId: "retro-vault-la" },
       { title: "Super Mario Galaxy", platform: "Wii",  condition: "CIB",                     price: 29.99,  storeId: "retro-vault-la" },
 
-      { title: "Pokémon FireRed",    platform: "GBA",  condition: "Cart only",              price: 119.99, storeId: "retro-vault-la" },
-      { title: "Pokémon Emerald",    platform: "GBA",  condition: "Cart only",              price: 229.99, storeId: "retro-vault-la" },
+      { title: "Pokémon FireRed",    platform: "Game Boy Advance",  condition: "Cart only",              price: 119.99, storeId: "retro-vault-la" },
+      { title: "Pokémon Emerald",    platform: "Game Boy Advance",  condition: "Cart only",              price: 229.99, storeId: "retro-vault-la" },
 
       { title: "Pokémon HeartGold",  platform: "DS",   condition: "Cart only",              price: 149.99, storeId: "retro-vault-la" },
       { title: "Pokémon Black 2",    platform: "DS",   condition: "Cart only",              price: 199.99, storeId: "retro-vault-la" },
@@ -513,6 +617,15 @@
       return "$" + num.toFixed(2);
     }
 
+    function formatPhoneForTel(phone) {
+      // Strip non-digits for the tel: link
+      return phone.replace(/[^0-9]/g, "");
+    }
+
+    function getStoreById(id) {
+      return stores.find(s => s.id === id);
+    }
+
     // ======== RENDER ========
 
     const storeGrid = document.getElementById("storeGrid");
@@ -520,14 +633,17 @@
     const resultsSummary = document.getElementById("resultsSummary");
     const searchInput = document.getElementById("searchInput");
     const platformSelect = document.getElementById("platformSelect");
+    const locationSelect = document.getElementById("locationSelect");
 
     function renderResults() {
       const query = searchInput.value.trim().toLowerCase();
       const platformFilter = platformSelect.value;
+      const locationFilter = locationSelect.value;
 
       let filtered = inventory.filter(item => {
         let matchesTitle = true;
         let matchesPlatform = true;
+        let matchesLocation = true;
 
         if (query) {
           matchesTitle = item.title.toLowerCase().includes(query);
@@ -535,8 +651,13 @@
         if (platformFilter) {
           matchesPlatform = item.platform === platformFilter;
         }
+        if (locationFilter) {
+          const store = getStoreById(item.storeId);
+          if (!store) return false;
+          matchesLocation = store.locationKey === locationFilter;
+        }
 
-        return matchesTitle && matchesPlatform;
+        return matchesTitle && matchesPlatform && matchesLocation;
       });
 
       const totalMatches = filtered.length;
@@ -545,7 +666,7 @@
       // Update summary
       resultsSummary.innerHTML =
         `<span>Showing <strong>${totalMatches}</strong> listing${totalMatches === 1 ? "" : "s"}</span>` +
-        `<span>Demo data · ${Object.keys(grouped).length} store${Object.keys(grouped).length === 1 ? "" : "s"}</span>`;
+        `<span>${Object.keys(grouped).length} store${Object.keys(grouped).length === 1 ? "" : "s"} after filters</span>`;
 
       // Clear previous
       storeGrid.innerHTML = "";
@@ -559,7 +680,7 @@
 
       // Render store-by-store
       Object.keys(grouped).forEach(storeId => {
-        const store = stores.find(s => s.id === storeId);
+        const store = getStoreById(storeId);
         const listings = grouped[storeId];
 
         if (!store) return;
@@ -580,8 +701,13 @@
         meta.className = "store-meta";
         meta.textContent = `${store.city} · ${store.area}`;
 
+        const address = document.createElement("div");
+        address.className = "store-address";
+        address.textContent = store.address;
+
         left.appendChild(storeName);
         left.appendChild(meta);
+        left.appendChild(address);
 
         const right = document.createElement("div");
         right.className = "store-meta";
@@ -599,6 +725,30 @@
           t.textContent = tag;
           tagsRow.appendChild(t);
         });
+
+        // Contact row
+        let hasContact = store.phone || store.instagram;
+        let contactRow = null;
+        if (hasContact) {
+          contactRow = document.createElement("div");
+          contactRow.className = "store-contact";
+
+          if (store.phone) {
+            const phoneLink = document.createElement("a");
+            phoneLink.href = `tel:${formatPhoneForTel(store.phone)}`;
+            phoneLink.textContent = `📞 ${store.phone}`;
+            contactRow.appendChild(phoneLink);
+          }
+
+          if (store.instagram) {
+            const instaLink = document.createElement("a");
+            instaLink.href = `https://instagram.com/${store.instagram}`;
+            instaLink.target = "_blank";
+            instaLink.rel = "noopener noreferrer";
+            instaLink.textContent = `Instagram · @${store.instagram}`;
+            contactRow.appendChild(instaLink);
+          }
+        }
 
         // Game list (with "show more" behavior)
         const gameList = document.createElement("div");
@@ -680,6 +830,7 @@
         // Build card
         card.appendChild(header);
         card.appendChild(tagsRow);
+        if (contactRow) card.appendChild(contactRow);
         card.appendChild(gameList);
 
         storeGrid.appendChild(card);
@@ -690,6 +841,7 @@
 
     searchInput.addEventListener("input", renderResults);
     platformSelect.addEventListener("change", renderResults);
+    locationSelect.addEventListener("change", renderResults);
 
     // Initial render
     renderResults();
